# flask-site

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  update_db.py  work.py
test_flask/: __init__.py  config.py  models.py  site.db
test_flask/main/: routes.py
test_flask/posts/: forms.py  routes.py
test_flask/templates/: allpost.html  create_post.html  home.html  layout.html  login.html  post.html  user_posts.html
test_flask/users/: forms.py  routes.py  utils.py
