[project]
name = "test-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "flask>=3.1.0",
    "pillow>=11.0.0",
    "tree>=0.2.4",
    "virtualenv>=20.28.0",
    "visitor>=0.1.3",
    "wikipedia>=1.4.0",
    "wtforms>=3.2.1",
]
